WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282538
[JSC] Fix Wasm::TypeInformation::tryCleanup() inconsistencies for Wasm GC types
https://bugs.webkit.org/show_bug.cgi?id=282538
Summary
[JSC] Fix Wasm::TypeInformation::tryCleanup() inconsistencies for Wasm GC types
Dan Hecht
Reported
2024-11-04 07:56:20 PST
rdar://137225000
Attachments
Add attachment
proposed patch, testcase, etc.
Dan Hecht
Comment 1
2024-11-04 09:12:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36128
EWS
Comment 2
2024-11-04 15:33:46 PST
Committed
286124@main
(36445525ff26): <
https://commits.webkit.org/286124@main
> Reviewed commits have been landed. Closing PR #36128 and removing active labels.
EWS
Comment 3
2024-11-05 16:28:34 PST
Committed
283286.428@safari-7620-branch
(1d762a3842ad): <
https://commits.webkit.org/283286.428@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2206 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug